Add Product modify function with updated docs
