# backend-api/controllers/ProductsController.js
@@ -51,6 +51,30 @@ async (req, res) => {
     res.status(204).send({error:"No Content"})
 }
 
+exports.modifyById = 
+async (req, res) => {
+    const productToBeChanged = await getProduct(req,res);
+    if(!productToBeChanged) {
+        return;
+    }
+    if (
+        !req.body.Name ||
+        !req.body.Price ||
+        !req.body.Category ||
+        !req.body.Description
+    ){
+        return res.status(400).send({error:'Missing parameter, please review your request data.'})
+    }
+    productToBeChanged.Name = req.body.Name;
+    productToBeChanged.Price = req.body.Price;
+    productToBeChanged.Category = req.body.Category;
+    productToBeChanged.Description = req.body.Description;
+    await productToBeChanged.save();
+    return res
+    .location(`${Utilities.getBaseURL(req)}/product/${productToBeChanged.ProductID}`).sendStatus(201)
+    .send(productToBeChanged)
+}
+
 const getProduct = 
 async (req, res) => {
     const idNumber = req.params.ProductID
